--- a/package.json
+++ b/package.json
@@ -37,9 +37,7 @@
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-mocha-test": "^0.12.7",
-    "load-grunt-tasks": "^3.3.0",
-    "mocha": "^2.3.4",
-    "time-grunt": "^1.2.2"
+    "mocha": "^2.3.4"
   },
   "dependencies": {
     "debuglog": "^1.0.1",
