--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "blanket": "^1.2.1",
     "chai": "^3.4.1",
+    "eslint": "^3.19.0",
     "event-emitter-enhancer": "0.0.62",
     "grunt": "^0.4.5",
     "grunt-blanket": "0.0.9",
