--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "merge-diff",
+  "name": "patch-diff",
   "version": "0.0.11",
   "description": "Emits diff events.",
   "main": "index.js",
@@ -12,9 +12,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/storkjs/merge-diff.git"
+    "url": "git+https://github.com/storkjs/patch-diff.git"
   },
   "keywords": [
+    "patch",
     "merge",
     "diff",
     "delta",
@@ -34,8 +35,8 @@
   },
   "homepage": "https://github.com/storkjs/merge-diff",
   "devDependencies": {
-    "blanket": "^1.2.1",
-    "chai": "^3.4.1",
+    "blanket": "^1.2.3",
+    "chai": "^3.5.0",
     "eslint": "^3.19.0",
     "event-emitter-enhancer": "0.0.62",
     "grunt": "^0.4.5",
@@ -43,12 +44,12 @@
     "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^0.7.0",
     "grunt-contrib-copy": "^0.8.2",
-    "grunt-coveralls": "^1.0.0",
+    "grunt-coveralls": "^1.0.1",
     "grunt-mocha-test": "^0.12.7",
-    "load-grunt-tasks": "^3.3.0",
-    "mocha": "^2.3.4",
-    "mocha-lcov-reporter": "^1.0.0",
-    "node.extend": "^1.1.5"
+    "load-grunt-tasks": "^3.5.2",
+    "mocha": "^2.5.3",
+    "mocha-lcov-reporter": "^1.3.0",
+    "node.extend": "^1.1.6"
   },
   "dependencies": {
     "debuglog": "^1.0.1",
