--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/storkjs/merge-diff/issues"
+    "url": "https://github.com/storkjs/patch-diff/issues"
   },
-  "homepage": "https://github.com/storkjs/merge-diff",
+  "homepage": "https://github.com/storkjs/patch-diff",
   "devDependencies": {
     "blanket": "^1.2.3",
     "chai": "^3.5.0",
